--- a/main.html
+++ b/main.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Semantic</title>
+    <style>
+        ul{
+            list-style-type: none;
+            margin : 0px;
+            padding : 0px;
+        }
+        li{
+            display: inline;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+    <nav>
+        <ul>
+            <li><a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Home</a> </li>
+            <li><a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">About us<a> </li>
+            <li><a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Contact us</a></li>
+        </ul>
+    </nav>
+
+    <h1>3 random videos</h1>
+    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls height="250"></video>
+    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" controls height="250"></video>
+    <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4" controls height="250"></video>
+    
 </body>
-
 </html>
