--- a/main.html
+++ b/main.html
@@ -23,9 +23,9 @@
 
     <nav>
         <ul>
-            <li><a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Home</a> </li>
-            <li><a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">About us<a> </li>
-            <li><a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Contact us</a></li>
+            <a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Home</a> 
+            <a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">About us<a> 
+            <a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Contact us</a>
         </ul>
     </nav>
 
