--- a/main.html
+++ b/main.html
@@ -23,9 +23,11 @@
 
     <nav>
         <ul>
-            <a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Home</a> 
-            <a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">About us<a> 
-            <a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Contact us</a>
+            <li> <a href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Home</a><a
+                    href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">About us<a><a
+                            href="https://www.youtube.com/watch?v=DFmkPjDdfOo&ab_channel=SurielHess">Contact us</a>
+            </li>
+
         </ul>
     </nav>
 
@@ -42,8 +44,8 @@
     </video>
 
     <video width="500px" height="300px" controls="controls">
-    <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"
-        type="video/mp4">
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"
+            type="video/mp4">
     </video>
 
 
